# otus-cpp-basics

./: .gitignore  README  clean
02/: CMakeLists.txt  main.cpp  move_me_out.h
03/: CMakeLists.txt  highscore.cpp  highscore.h  main.cpp
04/: Ball.cpp  Ball.hpp  CMakeLists.txt  Color.hpp  Dust.cpp  Dust.hpp  Physics.cpp  Physics.hpp  Point.hpp  Velocity.hpp  World.cpp  World.hpp
05/: CMakeLists.txt  statistics.cpp  statistics.hpp
06/: CMakeLists.txt  linked_list_container.cpp  linked_list_container.h  main.cpp  serial_container.cpp  serial_container.h
